@@ -228,6 +228,9 @@ bool Avionics::onMouseUp(int x, int y, int button, int layer)
 bool Avionics::onMouseDown(int x, int y, int button, int layer)
 {
     if (clickEmulation) {
+        bool res = call4(lua, "onMouseDown", x, y, button, layer);
+        if (res)
+            return true;
         clickEmulator.onMouseDown(button, x, y, layer);
         if (onMouseClick(x, y, button, layer))
             return true;
